<resources>
    <string name="app_name">Vinny\'s App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="subtitle">My Android Nanodegree Apps</string>

    <!--Button text-->
    <string name="movies">Popular Movies</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="reader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>

</resources>
