<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivityFragment"
    android:background="@color/white"
    android:backgroundTint="@color/light_grey">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/subtitle"
        android:id="@+id/textView_title"
        android:layout_gravity="center_horizontal|top"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movies"
        android:id="@+id/button_PopularMovies"
        android:minWidth="200dp"
        android:minHeight="60dp"
        android:backgroundTint="@color/orange"
        android:layout_below="@+id/textView_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:onClick="popularMoviesClicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        android:id="@+id/button_ScoresApp"
        android:minWidth="200dp"
        android:minHeight="60dp"
        android:backgroundTint="@color/orange"
        android:layout_below="@+id/button_PopularMovies"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="#ffffff"
        android:onClick="scoresAppClicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library"
        android:id="@+id/button_LibraryApp"
        android:minWidth="200dp"
        android:minHeight="60dp"
        android:backgroundTint="@color/orange"
        android:layout_below="@+id/button_ScoresApp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="#ffffff"
        android:onClick="libraryAppClicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/button_BuildItBigger"
        android:minWidth="200dp"
        android:minHeight="60dp"
        android:backgroundTint="@color/orange"
        android:layout_below="@+id/button_LibraryApp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="#ffffff"
        android:onClick="buildItBiggerClicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reader"
        android:id="@+id/button_XYZReader"
        android:minWidth="200dp"
        android:minHeight="60dp"
        android:backgroundTint="@color/orange"
        android:layout_below="@+id/button_BuildItBigger"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="#ffffff"
        android:onClick="xYZReaderClicked"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button_CapstoneApp"
        android:minWidth="200dp"
        android:minHeight="60dp"
        android:backgroundTint="@color/vivid_orange"
        android:textColor="#ffffff"
        android:layout_below="@+id/button_XYZReader"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:onClick="capstoneAppClicked"/>


</RelativeLayout>